--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,13 @@
-sonar.projectKey=jgennari-2023-devsecops-example
-sonar.organization=jgennari
-sonar.python.coverage.reportPaths=./coverage.xml
-sonar.sources=owm/
-sonar.tests=tests/
+sonar.projectKey=bccha_lg23devsecops
+sonar.organization=bccha
+
+# This is the name and version displayed in the SonarCloud UI.
+#sonar.projectName=lg23devsecops
+#sonar.projectVersion=1.0
+
+# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
+#sonar.sources=.
+
+# Encoding of the source code. Default is default system encoding
+#sonar.sourceEncoding=UTF-8
 
