--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -3,7 +3,7 @@ on:
   workflow_dispatch:
     inputs:
       name:
-        description: "Mnaual Trigger"
+        description: "Manual Trigger"
         default: "MT"
 jobs:
   build:
@@ -28,8 +28,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           args: >
-            -Dsonar.organization=jgennari 
-            -Dsonar.projectKey=jgennari-2023-devsecops-example 
+            -Dsonar.organization=bccha 
+            -Dsonar.projectKey=bccha_lg23devsecops 
             -Dsonar.sources=owm/
             -Dsonar.tests=tests/
             -Dsonar.verbose=true
